# cuda_simple_test

./: .gitignore  CMakeLists.txt  main
src/: .learn.cu.swp  .learn.h.swp  CMakeLists.txt  learn.cu  learn.h  main.cc
